# 106AProject_Drone

./: .gitignore  Dockerfile  README.md  calibration.yaml  config.py  debug_aruco.py  debug_aruco_live.py  docker-compose.yml  documentation.txt  frames_2025-11-24_20.14.45.gv  main.py  pyproject.toml  test.py  test_controller.py  test_flip_workaround.py
control/: follow_controller.py  sequence_controller.py
docs/: ARCHITECTURE.md  CONTROL_GUIDE.md  GESTURE_CONTROL.md  GETTING_STARTED.md  index.html  optimize-video.sh
docs/js/: main.js
hardware/: mock_driver.py  tello_driver.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
interfaces/: controller.py  drone.py  vision.py
log/: latest_build
opencv_aruco/: aruco_detection.py  camera_calibration.py  detect_aruco_video.py  utils.py
planning/: __init__.py  planner.py  position_estimator.py  sequence_planner.py  trajectory_recorder.py  trajectory_visualizer.py
ros2_aruco_ws/config/: ost.yaml
ros2_aruco_ws/config2/: ost.txt  ost.yaml
ros2_aruco_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_aruco_ws/log/: latest_build
ros2_aruco_ws/my_aruco_detector/: setup.py
ros_workspace/: aruco_tello_control.py  camera_calibration.py  collect_images.py  detect_aruco_video.py  find_cameras.py  keyboard.py  requirements.txt  test.py
ros_workspace/src/tello_gesture_control/: package.xml  (+2 more)
utils/: followMe.py  logger.py
vision/: aruco_detector.py  hand_gesture.py
website/: README.md  index.html  optimize-video.sh
website/css/: style.css
website/js/: main.js
(+58 files in other folders)
