[project]
name = "ros2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djitellopy>=2.5.0",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.3",
]
